--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -25,6 +25,8 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.12"
+          cache: pip
+          cache-dependency-path: docs/requirements.txt
 
       - name: Install OS deps (Graphviz)
         run: |
@@ -35,9 +37,15 @@ jobs:
         run: |
           python -m pip install -U pip
           pip install -r docs/requirements.txt
-        run: |
+
+      # Choose ONE of these. Start lenient; switch to strict later.
+      - name: Link check (lenient)
+        run: python -m sphinx -b linkcheck docs/source docs/build/linkcheck || true
+      # - name: Link check (strict)
+      #   run: python -m sphinx -b linkcheck docs/source docs/build/linkcheck -W
 
       - name: Build Sphinx
+        run: |
           python -m sphinx -b html docs/source docs/build/html
           # prevent GitHub Pages/Jekyll from ignoring _static, etc.
           touch docs/build/html/.nojekyll
@@ -48,11 +56,11 @@ jobs:
           path: docs/build/html
 
   deploy:
+    needs: build
+    runs-on: ubuntu-latest
     environment:
       name: github-pages
       url: ${{ steps.deploy.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
     steps:
       - name: Deploy to GitHub Pages
         id: deploy
