--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-	"devDependencies": {
-		"typescript": "^5.9.2",
-		"ts-node": "^10.9.2",
-		"@types/node": "^24.3.0"
-	}
+  "license": "Apache-2.0",
+  "devDependencies": {
+    "typescript": "^5.9.2",
+    "ts-node": "^10.9.2",
+    "@types/node": "^24.3.0"
+  }
 }
