--- a/.github/workflows/web-ci.yml
+++ b/.github/workflows/web-ci.yml
@@ -1,12 +1,10 @@
-# .github/workflows/web-ci.yml
 name: web-ci
 on:
-  push:
-    paths:
-      - 'web/**'
   pull_request:
-    paths:
-      - 'web/**'
+    paths: ['web/**']
+  push:
+    paths: ['web/**']
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -14,8 +12,25 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with: { node-version: 'lts/*' }
-      - name: Skip if no package.json
-        run: test -f web/package.json || { echo "No web app yet, skipping"; exit 0; }
-      - run: corepack enable && pnpm i
+
+      - name: Detect vite in web/package.json
+        id: detect
+        run: |
+          if [ ! -f web/package.json ]; then
+            echo "has_vite=false" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+          node -e "const p=require('./web/package.json'); const has=Boolean((p.devDependencies&&p.devDependencies.vite)||(p.dependencies&&p.dependencies.vite)); console.log('has_vite='+has)" >> $GITHUB_OUTPUT
+
+      - name: Skip (no web app yet)
+        if: steps.detect.outputs.has_vite != 'true'
+        run: echo "No vite dependency yet; skipping build."
+
+      - name: Install deps
+        if: steps.detect.outputs.has_vite == 'true'
+        run: corepack enable && pnpm i
         working-directory: web
-      - run: pnpm -C web build
+
+      - name: Build
+        if: steps.detect.outputs.has_vite == 'true'
+        run: pnpm -C web build
