--- a/backend/.github/workflows/backend-ci.yml
+++ b/backend/.github/workflows/backend-ci.yml
@@ -1,3 +1,49 @@
-name: backend-ci
-on:[push]
-jobs:{test:{runs-on:ubuntu-latest,steps:[{uses:'actions/checkout@v4'}]}}
+name: Backend CI
+on:
+  pull_request:
+    paths:
+      - "backend/**"
+  push:
+    branches: [ main ]
+    paths:
+      - "backend/**"
+
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: backend
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+
+      - name: Cache pip
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('backend/pyproject.toml') }}
+          restore-keys: ${{ runner.os }}-pip-
+
+      - name: Install (editable + dev extras)
+        run: |
+          python -m pip install --upgrade pip
+          pip install -e ".[dev]"
+
+      - name: Lint
+        run: ruff check .
+
+      - name: Type check
+        run: mypy src
+
+      - name: Test
+        env:
+          # Isolated temp locations in CI
+          RESULTS_DIR: ../results
+          DB_URL: sqlite:////home/runner/work/${{ github.event.repository.name }}/${{ github.event.repository.name }}/results/he.sqlite
+        run: |
+          mkdir -p ../results
+          pytest --cov=src --cov-report=term-missing --cov-fail-under=85
