chore(env): provide example API_KEY, CORS, DB_URL, RESULTS_DIR

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,5 @@
+RESULTS_DIR=../results
+DB_URL=sqlite:///${RESULTS_DIR}/he.sqlite
 API_KEY=devkey
 CORS_ALLOW_ORIGINS=http://localhost:5173
-DB_URL=sqlite:///results/he.sqlite
-REDIS_URL=redis://localhost:6379/0
+API_HEADER_NAME=X-API-Key
