--- a/web/package.json
+++ b/web/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "he-web",
-  "private": true,
-  "version": "0.0.1",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "test": "vitest"
+    "preview": "vite preview --port 5173"
+  },
+  "devDependencies": {
+    "@types/node": "^20.19.11",
+    "@vitejs/plugin-react-swc": "^3.11.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.12",
+    "typescript": "^5.9.2",
+    "vite": "^5.4.19"
   }
 }
