--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -27,6 +27,18 @@ dev = [
   "mypy",
 ]
 
+docs = [
+  "sphinx",
+  "furo",
+  "myst-parser",
+  "sphinx-autodoc-typehints",
+  "sphinx-copybutton",
+  "sphinxcontrib.mermaid",
+  "sphinx_sitemap",
+  "sphinxext.opengraph",
+  "sphinx_design"
+]
+
 [tool.setuptools]
 package-dir = {"" = "src"}
 
