--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -53,7 +53,7 @@ jobs:
 
       - name: Build Sphinx HTML
         run: |
-          python -m sphinx -W --keep-going -b html docs docs/_build/html
+          python -m sphinx -W --keep-going -b html docs/source docs/build/html
           # Optional linkcheck on PRs only (does not block deploy)
           if [ "${{ github.event_name }}" = "pull_request" ]; then
             python -m sphinx -b linkcheck docs docs/_build/linkcheck || true
