--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,8 +1,46 @@
 [build-system]
-requires=['setuptools','wheel']
-build-backend='setuptools.build_meta'
+requires = ["setuptools>=68", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
-name='he-backend'
-version='0.0.1'
-requires-python='>=3.12'
-dependencies=['fastapi','uvicorn[standard]','sqlmodel','alembic','redis','rq','pydantic','python-multipart','prometheus-client','typer']
+name = "he-backend"
+version = "0.0.1"
+requires-python = ">=3.12"
+dependencies = [
+  "fastapi",
+  "uvicorn[standard]",
+  "sqlmodel",
+  "alembic",
+  "pydantic",
+  "python-multipart",
+  "prometheus-client",
+  "typer",
+  "httpx",
+]
+
+[project.optional-dependencies]
+dev = [
+  "pytest",
+  "pytest-cov",
+  "pytest-asyncio",
+  "ruff",
+  "mypy",
+]
+
+docs = [
+  "sphinx",
+  "furo",
+  "myst-parser",
+  "sphinx-autodoc-typehints",
+  "sphinx-copybutton",
+  "sphinxcontrib.mermaid",
+  "sphinx_sitemap",
+  "sphinxext.opengraph",
+  "sphinx_design"
+]
+
+[tool.setuptools]
+package-dir = {"" = "src"}
+
+[tool.setuptools.packages.find]
+where = ["src"]
