chore(gitignore): ignore .coverage, results/, and *.sqlite artifacts

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -14,3 +14,7 @@ backend/.env
 # Results artifacts (keep only the .gitkeep placeholders)
 results/**/*
 !results/**/.gitkeep
+
+.coverage
+results/
+*.sqlite
